# stem-agent

./: .gitignore  CHANGELOG.md  CITATION.cff  JOURNAL.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/fixtures/: tasks_economics.jsonl  tasks_legal.jsonl
data/fixtures/contracts/: synth_advertising_15.txt  synth_construction_16.txt  synth_consulting_5.txt  synth_data_processing_19.txt  synth_distribution_6.txt  synth_employment_7.txt  synth_franchise_13.txt  synth_lease_12.txt  synth_loan_11.txt  synth_maintenance_18.txt  synth_managed_services_20.txt  synth_msa_1.txt  synth_nda_3.txt  synth_outsourcing_17.txt  synth_partnership_9.txt  synth_research_14.txt  synth_reseller_10.txt  synth_saas_8.txt  synth_supply_4.txt  synth_swl_2.txt
data/rule_packs/: cuad_taxonomy.json  financial_ratios.json  gdpr_art5.json
report/: main.tex  refs.bib
scripts/: aggregate_runs.py  cross_session.py  fetch_fixtures.py
src/stem_agent/: __init__.py  cli.py  config.py  types.py
src/stem_agent/agent/: beam_search.py  mutations.py  pipeline.py  promote.py  reflections.py  specialize.py  stem.py  step_eval.py
src/stem_agent/eval/: cuad.py  edgar_eval.py  financebench.py  legalbench.py  runner.py  sara.py  scorers.py
src/stem_agent/llm/: lm_client.py  (+1 more)
tests/: test_archive.py  test_beam_search.py  test_eval_scorers.py  test_events.py  test_integration_offline.py  test_judge_client.py  test_lm_client.py  test_mutations.py  test_pipeline.py  test_promote.py  test_reflections.py  test_registry.py  test_step_eval.py  test_tools_base.py  test_tools_domain_econ.py  test_tools_domain_legal.py  test_tools_evaluation.py  test_tools_execution.py  test_tools_processing.py  test_types.py  test_universal_latex.py
tool_library/: composites.json  embeddings.json  lineage.dot  primitives.json  reflections.json
(+44 files in other folders)
